syntax = "proto3";
package logging;
option go_package = "eddisonso.com/go-gfs/gen/logging";

enum LogLevel {
  DEBUG = 0;
  INFO = 1;
  WARN = 2;
  ERROR = 3;
}

message LogEntry {
  string source = 1;
  LogLevel level = 2;
  string message = 3;
  int64 timestamp = 4;
  map<string, string> attributes = 5;
}

message PushLogRequest {
  LogEntry entry = 1;
}

message PushLogResponse {}

service LogService {
  rpc PushLog(PushLogRequest) returns (PushLogResponse);
}
